--- a/app/index.html
+++ b/app/index.html
@@ -15,27 +15,13 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
 	<div class="wrapper">
-
-
-
-
-
-		
-
-
-
-
-
 		<section class="changeling" id="contText">
 			<div class="container">
-
 				<div class="changeling__row">
 					<!-- 	Первая карточка -->
 					<div class="card">
 						<div class="card-item">
-
 							<!-- 	передняя часть карточки -->
 							<div class="front ">
 								<div class="card__logo">
@@ -69,10 +55,10 @@
 								</div>
 								<div class="card__info">
 									<ul>
-										<li><div><img src="img/card/PrimeryCard/back/geo.png" alt=""></div><span>city address, street home location goes here</span></li>
-										<li><div class="color"><img src="img/card/PrimeryCard/back/telefon.png" alt=""></div><span>phone: 8 988 259 57 70</span></li>
-										<li><div><img src="img/card/PrimeryCard/back/mail.png" alt=""></div><span>mail kyrdayvadim@gmail.com</span></li>
-										<li><div class="color"><img src="img/card/PrimeryCard/back/name.png" alt=""></div><span>www.company.anime.com</span></li>
+										<li><div><img src="img/geo.png" alt=""></div><span>city address, street home location goes here</span></li>
+										<li><div class="color"><img src="img/telefon.png" alt=""></div><span>phone: 8 988 259 57 70</span></li>
+										<li><div><img src="img/mail.png" alt=""></div><span>mail kyrdayvadim@gmail.com</span></li>
+										<li><div class="color"><img src="img/name.png" alt=""></div><span>www.company.anime.com</span></li>
 									</ul>
 								</div>
 							</div>
