--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 							<!-- 	передняя часть карточки -->
 							<div class="front ">
 								<div class="card__logo">
-									<img src="img/card/PrimeryCard/front/front_card_logo.png" alt="">
+									<img src="img/front_card_logo.png" alt="">
 									<div class="card__title">
 										<span class="card__title_company">COMPANY</span><span class="card__title_logo">LOGO</span>
 										<span class="card__title_slog">slogangoeshere</span>
